[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/SlickerTheme.tres" type="Theme" id=1]
[ext_resource path="res://Menus/Credits.gd" type="Script" id=2]
[ext_resource path="res://UI/SlickerTitleDynamicFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/DanskaRegular-4PBD.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/SlickerSmallDynamicFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://UI/SlickerDynamicFont.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=1]
resource_name = "rollCredits"
length = 24.0
step = 2.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "opening"
}, {
"args": [  ],
"method": "programing"
}, {
"args": [  ],
"method": "music"
}, {
"args": [  ],
"method": "art"
}, {
"args": [  ],
"method": "soundEffects"
}, {
"args": [  ],
"method": "writing"
}, {
"args": [  ],
"method": "testers"
}, {
"args": [  ],
"method": "tools"
}, {
"args": [  ],
"method": "thanks"
}, {
"args": [  ],
"method": "playing"
}, {
"args": [  ],
"method": "closing"
}, {
"args": [  ],
"method": "finish"
} ]
}

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 156.0
margin_top = 48.0
margin_right = 164.0
margin_bottom = 132.0

[node name="Header" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 8.0
margin_bottom = 22.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 6 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 8.0
margin_bottom = 24.0

[node name="Line1" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 8.0
margin_bottom = 44.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 5 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 8.0
margin_bottom = 64.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 5 )
align = 1

[node name="Line3" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 8.0
margin_bottom = 84.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 5 )
align = 1

[node name="Title" type="Label" parent="CenterContainer"]
margin_left = 156.0
margin_top = 68.0
margin_right = 164.0
margin_bottom = 112.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 3 )
align = 1

[node name="Company" type="Label" parent="CenterContainer"]
margin_left = 156.0
margin_top = 76.0
margin_right = 164.0
margin_bottom = 103.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "rollCredits"
anims/rollCredits = SubResource( 1 )
